# kkCraft

./: CMakeLists.txt  README.md
assets/shaders/: triangle.vert
src/: App.h  AppCore.cpp  AppData.cpp  AppLoop.cpp  AppVulkan.cpp  AppWindow.cpp  AppWorld.cpp  Log.cpp  Log.h  main.cpp
